# textgrid

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build
include/: Cell.hpp  TextCell.hpp  TextGrid.hpp  Utilities.hpp
src/: Cell.cpp  TextCell.cpp  TextGrid.cpp  Utilities.cpp  demo.cpp  main.cpp
